[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib","cdylib"]

[dependencies]
bincode = "1.3.3"
flutter_rust_bridge = "1"
flutter-data-types = { path = "flutter-data-types" }
hw_keystore = { path = "hw_keystore" }

[build-dependencies]
flutter_rust_bridge_codegen = "1"
