[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib","cdylib"]

[dependencies]
bincode = "1.3.3"
flutter_rust_bridge = "1"
flutter-data-types = { path = "flutter-data-types" }
platform_support = { path = "platform_support" }

[build-dependencies]
flutter_rust_bridge_codegen = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
platform_support = { path = "platform_support", default-features = false, features = ["software"] }
