[workspace]
members = [
    "apple_app_attest",
    "configuration_server",
    "error_category",
    "error_category/error_category_derive",
    "flutter_api",
    "flutter_api/flutter_api_macros",
    "gba_hc_converter",
    "mdoc",
    "mock_relying_party",
    "openid4vc",
    "platform_support",
    "tests_integration",
    "wallet",
    "wallet/entity",
    "wallet/migration",
    "wallet_ca",
    "wallet_common",
    "wallet_provider",
    "wallet_provider/database_settings",
    "wallet_provider/domain",
    "wallet_provider/migrations",
    "wallet_provider/persistence",
    "wallet_provider/service",
    "wallet_server",
    "wallet_server/migration",
]
exclude = ["flutter_rust_bridge_codegen", "uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "0.2.2-dev"
edition = "2021"
rust-version = "1.80"

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.dependencies]
accept-language = "3.1.0"
aes-gcm = "0.10.3"
android_logger = { version = "0.14.1", default-features = false }
anyhow = "1.0.66"
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
assert-json-diff = "2.0.2"
askama = "0.12.1"
assert_matches = "1"
async-trait = "0.1.68"
axum = { version = "0.7.5", default-features = false }
axum-extra = "0.9.3"
axum-server = "0.6.0"
backtrace = "0.3.67"
base64 = "0.22.1"
biscuit = "0.7.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", default-features = false }
ciborium = "0.2.1"
clap = "4.4.7"
clio = "0.3.4"
config = { version = "0.14.0", default-features = false }
const-decoder = "0.3.0"
coset = "0.3.3"
cryptoki = "0.7.0"
crypto-common = "0.1.6"
cstr = "0.2.11"
csv = "1.3.0"
ctor = "0.2.5"
dashmap = "6.0.1"
der = "0.7.7"
derive_more = { version = "0.99.17", default-features = false }
dotenvy = "0.15.7"
etag = "4.0.0"
flutter_rust_bridge = { version = "1.70.0", default-features = false }
futures = { version = "0.3.17", default-features = false }
hex = "0.4.3"
hex-literal = "0.4.1"
http = "1.1.0"
hmac = "0.12.1"
indexmap = "2.0.2"
insta = "1.39.0"
itertools = "0.13.0"
jni = "0.21.1"
josekit = "0.8.3"
jsonwebtoken = { version = "9.3.0", default-features = false }
libsqlite3-sys = { version = "0.27.0", default-features = false }
mime = "0.3.17"
mockall = "0.12.1"
nutype = "0.5.0"
oslog = { version = "0.2.0", default-features = false }
p256 = { version = "0.13.2", default-features = false }
passkey-types = "0.3.0"
parking_lot = "0.12.1"
pem = "3.0.2"
predicates = { version = "3.0.4", default-features = false }
proc-macro2 = "1.0.66"
quick-xml = "0.34.0"
quote = "1.0.26"
r2d2-cryptoki = "0.3.0"
rand = "0.8.5"
rand_core = "0.6.4"
rcgen = { version = "0.11.3", default-features = false }
regex = "1.7.0"
reqwest = { version = "0.12.5", default-features = false }
ring = "0.17.0"
rpassword = "7.3.1"
rstest = "0.21.0"
rustls-webpki = "0.101.2"
sea-orm = { version = "0.12.3", default-features = false }
sea-orm-migration = { version = "0.12.3", default-features = false }
sea-query = { version = "0.30.7", default-features = false }
sec1 = "0.7.3"
sentry = { version = "0.34", default-features = false }
sentry-panic = "0.34"
serde = "1.0.193"
serde-aux = "4.2.0"
serde_bytes = "0.11.7"
serde_json = { version = "1.0.92", default-features = false }
serde_repr = "0.1.16"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.33"
serde_with = "3.3.0"
serial_test = "3.0.0"
sha2 = "0.10.6"
strfmt = "0.2.4"
strum = "0.26.3"
syn = "2.0"
tempfile = "3.9.0"
thiserror = "1.0.39"
time = "0.3.31"
tokio = { version = "1.27.0", default-features = false }
tower = { version = "0.4.0", default-features = false }
tower-http = { version = "0.5.2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-test = "0.2.5"
trait-variant = "0.1.1"
trybuild = "1.0.96"
uniffi = { version = "0.28.0", default-features = false }
url = "2.4.0"
uuid = "1.4.0"
wiremock = "0.6.0"
x509-parser = "0.15.1"
