[workspace]
members = [
    "demo/demo_index",
    "demo/demo_issuer",
    "demo/demo_relying_party",
    "demo/demo_utils",
    "flutter_api",
    "flutter_api/flutter_api_macros",
    "gba_hc_converter",
    "lib/android_attest",
    "lib/apple_app_attest",
    "lib/attestation_data",
    "lib/attestation_types",
    "lib/crypto",
    "lib/dcql",
    "lib/error_category",
    "lib/error_category/error_category_derive",
    "lib/hsm",
    "lib/http_utils",
    "lib/jwt",
    "lib/mdoc",
    "lib/measure",
    "lib/openid4vc",
    "lib/openid4vc_server",
    "lib/sd_jwt",
    "lib/sd_jwt_vc_metadata",
    "lib/token_status_list",
    "lib/utils",
    "lib/wscd",
    "static_server",
    "tests_integration",
    "update_policy/model",
    "update_policy/server",
    "wallet",
    "wallet/configuration",
    "wallet/entity",
    "wallet/migrations",
    "wallet/platform_support",
    "wallet_ca",
    "wallet_provider",
    "wallet_provider/database_settings",
    "wallet_provider/domain",
    "wallet_provider/migrations",
    "wallet_provider/persistence",
    "wallet_provider/service",
    "wallet_provider/wallet_account",
    "wallet_server/issuance_server",
    "wallet_server/issuance_server/migrations",
    "wallet_server/issuer_settings",
    "wallet_server/pid_issuer",
    "wallet_server/pid_issuer/migrations",
    "wallet_server/server_utils",
    "wallet_server/server_utils/migrations",
    "wallet_server/status_lists",
    "wallet_server/status_lists/migrations",
    "wallet_server/verification_server",
    "wallet_server/verification_server/migrations",
]
exclude = ["uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "0.5.0-dev"
edition = "2024"
rust-version = "1.92"

[workspace.lints.rust]
async_fn_in_trait = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace.lints.clippy]
allow_attributes = "deny"
cloned_instead_of_copied = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
redundant_allocation = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
unused_self = "warn"

[workspace.dependencies]
accept-language = "3.1.0"
aes-gcm = { version = "0.10.3", features = ["std"] }
# android_logger version 0.15.x and above is held back because PlatformLogWriter was made private.
android_logger = { version = "0.14.1", default-features = false }
anyhow = "1.0.100"
askama = "0.14.0"
askama_web = "0.14.6"
assert-json-diff = "2.0.2"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
assert_matches = "1.5.0"
async-dropper = "0.3.1"
async-trait = "0.1.89"
axum = { version = "0.8.7", default-features = false, features = ["http1", "query", "tokio", "tower-log", "tracing"] }
axum-extra = "0.12.2"
axum-server = "0.8.0"
axum_csrf = "0.11.0"
backtrace = "0.3.76"
base64 = "0.22.1"
biscuit = "0.7.0"
bitflags = "2.10.0"
built = "0.8.0"
bytes = "1.11.0"
cfg-if = "1.0.4"
cfg_eval = "0.1.2"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
ciborium = "0.2.2"
clap = "4.5.53"
clio = "0.3.5"
config = { version = "0.15.19", default-features = false }
const-decoder = "0.4.0"
# coset version 0.5.x and above is held back by passkey-types
coset = { version = "0.3.8", features = ["std"] }
cryptoki = "0.10.0"
crypto-common = "0.1.7"
cstr = "0.2.12"
csv = "1.4.0"
ctor = "0.6.3"
dashmap = "6.1.0"
data-url = "0.3.2"
der = { version = "0.7.10", features = ["std"] }
derive_more = "2.1.0"
dotenvy = "0.15.7"
etag = "4.0.0"
flate2 = "1.1.5"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
gcloud-auth = { version = "1.1.2", default-features = false, features = ["rustls-tls"] }
hex = "0.4.3"
hex-literal = "1.1.0"
http = "1.4.0"
http-cache-reqwest = { version = "0.16.0", default-features = false }
hmac = { version = "0.12.1", features = ["std"] }
indexmap = "2.12.1"
int-enum = "1.2.0"
itertools = "0.14.0"
jni = "0.21.1"
josekit = "0.10.3"
jsonschema = { version = "0.37.4", default-features = false }
# held back because of mutually exclusive features
jsonwebtoken = { version = "9.3.1", default-features = false }
libc = "0.2.178"
# held back by sea-orm / sqlx
libsqlite3-sys = { version = "0.30.1", default-features = false }
log = "0.4.29"
mediatype = "0.21.0"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }
mime = "0.3.17"
mockall = "0.14.0"
moka = "0.12.11"
nom = "8.0.0"
nonempty-collections = "1.2.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
nutype = "0.6.2"
oslog = { version = "0.2.0", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "std"] }
passkey-types = "0.4.0"
parking_lot = "0.12.5"
pem = "3.0.6"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
predicates = { version = "3.1.3", default-features = false }
proc-macro2 = "1.0.103"
quick-xml = "0.38.4"
quote = "1.0.42"
r2d2-cryptoki = "0.4.0-rc.0"
# rand 0.9.x or higher is held back by rsa
rand = "0.8.5"
# rand_core 0.7.x or higher is held back by p256
rand_core = "0.6.4"
# rasn 0.27.x or higher is held back, as OctetString in those versions does not implement Serialize.
rasn = { version = "0.26.6", features = ["std"] }
rcgen = { version = "0.14.5", default-features = false }
regex = "1.12.2"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
reqwest-middleware = { version = "0.4.2", default-features = false }
ring = { version = "0.17.14", features = ["std"] }
rpassword = "7.4.0"
rsa = { version = "0.9.9", default-features = false, features = ["std", "u64_digit"] }
rstest = "0.26.1"
# held back by sea-orm / sqlx via libsqlite3-sys
rusqlite = "0.32.1"
rustix = "1.1.2"
rustls = { version = "0.23.35", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pki-types = { version = "1.13.1", features = ["std"] }
rustls-webpki = { version = "0.103.8", features = ["ring"] }
sanitize-filename = "0.6.0"
sea-orm = { version = "1.1.19", default-features = false }
sea-orm-migration = { version = "1.1.19", default-features = false }
sec1 = "0.7.3"
semver = "1.0.27"
sentry = { version = "0.46.0", default-features = false }
serde = "1.0.228"
serde-aux = "4.7.0"
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_urlencoded = "0.7.1"
serde_valid = "2.0.0"
serde_with = "3.16.1"
serial_test = "3.2.0"
sha2 = "0.10.9"
spki = { version = "0.7.3", features = ["std"] }
ssri = "9.2.0"
strfmt = "0.2.5"
strum = "0.27.2"
syn = "2.0.111"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", default-features = false, features = ["parking_lot"] }
tokio-test = "0.4.4"
toml = "0.9.8"
tower.version = "0.5.2"
tower-http.version = "0.6.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
    "parking_lot",
] }
tracing-test = "0.2.5"
trait-variant = "0.1.2"
trybuild = "1.0.114"
ts-rs = "11.1.0"
uniffi = { version = "0.30.0", default-features = false }
url = "2.5.7"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.19.0"
wiremock = "0.6.5"
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }
x509-parser = "0.18.0"
yoke = "0.8.1"
zstd = "0.13.3"

[patch.crates-io]
# Pin on newer version due to https://github.com/parallaxsecond/rust-cryptoki/pull/291
cryptoki = { git = "https://github.com/parallaxsecond/rust-cryptoki.git", rev = "2765af619ed245f8787e46987483bf96179e30cd" }
