[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = [ "bundled-sqlcipher" ] }
platform_support = { path = "../platform_support", features = ["software"] }
tokio = { version = "1", features = [ "full" ] } # Should this live globally somewhere?
rand = "0.8.3"