[package]
name = "flutter-data-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
const_format = "0.2.30"
bincode = "1.3.3"
serde = "1.0.152"
serde-generate = "0.24.0"
serde-reflection = "0.3.6"
