[package]
name = "flutter_api"
version.workspace = true
edition.workspace = true

[lib]
name = "rust_core"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "serde_reflection_codegen"
required-features = ["serde_reflection_codegen"]

[features]
serde_reflection_codegen = [
    "dep:const_format",
    "dep:serde-generate",
    "dep:serde-reflection",
]

[dependencies]
wallet = { path = "../wallet" }
anyhow = "1.0.69"
flutter_rust_bridge = "1.70.0"
once_cell = "1.17.0"
serde = { version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
const_format = { version = "0.2.30", optional = true }
serde-generate = { version = "0.25.0", optional = true }
serde-reflection = { version = "0.3.6", optional = true }
