[package]
name = "hw_keystore"
version = "0.1.0"
edition = "2021"

[features]
default = ["hardware"]
hardware = ["dep:uniffi", "dep:lazy_static", "spki/std"]
software = ["dep:rand_core"]
integration-test = []

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
thiserror = "1.0.38"
p256 = "0.12.0"
spki = "*"
uniffi = { version = "0.23.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand_core = { version = "0.6.4", optional = true }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"], optional = true }
