[package]
name = "wallet"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.39"
anyhow = "1.0.66"
p256 = { version = "0.12.0", features = ["pem"] }
ring = "0.16.20"
sha2 = "0.10.6"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = { version = "1.0.92", features = ["raw_value"] }
base64 = "0.21.0"
rand = "0.8.5"
jsonwebtoken = "8.2.0"
der = { version = "0.6.1", features = ["alloc"] }
once_cell = "1.17.0"
