[package]
name = "wallet"
version.workspace = true
edition.workspace = true

[dependencies]
platform_support = { path = "../platform_support" }
wallet_shared = { path = "../wallet_shared" }
anyhow = "1.0.66"
base64 = "0.21.0"
der = { version = "0.6.1", features = ["alloc"] }
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
p256 = { version = "0.12.0", features = ["pem"] }
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = { version = "1.0.92", features = ["raw_value"] }
sha2 = "0.10.6"
thiserror = "1.0.39"

# disable the "hardware" feature and enable "software" for platform_support
# when not building for either Android or iOS
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
platform_support = { path = "../platform_support", default-features = false, features = [
    "software",
] }

[dev-dependencies]
platform_support = { path = "../platform_support", features = ["software"] }
