[package]
name = "android_attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
encode = []
mock_chain = ["dep:rcgen", "derive_more/debug"]
mock_play_integrity = ["encode", "dep:base64"]
mock = ["mock_chain", "mock_play_integrity"]
network_test = []

[dependencies]
bitflags.workspace = true
chrono = { workspace = true, features = ["serde", "now"] }
const-decoder.workspace = true
derive_more = { workspace = true, features = ["as_ref"] }
http-cache-reqwest = { workspace = true, features = ["manager-moka"] }
int-enum.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
nutype = { workspace = true, features = ["regex", "serde"] }
p256 = { workspace = true, features = ["std", "ecdsa", "pkcs8"] }
rasn = { workspace = true, features = ["std"] }
regex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware.workspace = true
rsa = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["chrono", "base64", "hex"] }
spki = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
trait-variant.workspace = true
url.workspace = true
x509-parser.workspace = true

base64 = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true, features = ["aws_lc_rs"] }

[dev-dependencies]
assert_matches.workspace = true
p256 = { workspace = true, features = ["pem"] }
rand.workspace = true
rstest.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
tokio = { workspace = true, features = ["macros", "parking_lot"] }
wiremock.workspace = true
