[package]
name = "android_attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
encode = []
mock = ["encode", "dep:derive_more", "dep:rand", "dep:rcgen", "dep:time"]
network_test = []
# Accept attested keys from the emulator. This allows software security level.
emulator = ["dep:tracing"]

[dependencies]
bitflags.workspace = true
cfg-if.workspace = true
chrono = { workspace = true, features = ["serde", "now"] }
const-decoder.workspace = true
http-cache-reqwest = { workspace = true, features = ["manager-moka"] }
int-enum.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
nutype = { workspace = true, features = ["regex", "serde"] }
p256 = { workspace = true, features = ["std", "ecdsa", "pkcs8"] }
rasn = { workspace = true, features = ["std"] }
regex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware.workspace = true
rsa = { workspace = true, features = ["std"] }
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
spki = { workspace = true, features = ["std"] }
thiserror.workspace = true
url.workspace = true
x509-parser.workspace = true

derive_more = { workspace = true, optional = true, features = ["debug"] }
rand = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true, features = ["aws_lc_rs"] }
time = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
derive_more = { workspace = true, features = ["debug", "from"] }
p256 = { workspace = true, features = ["std", "ecdsa", "pem", "pkcs8"] }
rand.workspace = true
rcgen = { workspace = true, features = ["aws_lc_rs"] }
rstest.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
wiremock.workspace = true
