[package]
name = "apple_app_attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
chrono = { workspace = true, features = ["now"] }
ciborium.workspace = true
coset.workspace = true
nutype.workspace = true
p256 = { workspace = true, features = ["std", "ecdsa", "pkcs8"] }
passkey-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
x509-parser.workspace = true
rustls-webpki.workspace = true

[dev-dependencies]
const-decoder.workspace = true
