[package]
name = "apple_app_attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[test]]
name = "assertion"
path = "tests/assertion.rs"
required-features = ["mock"]

[[test]]
name = "attestation"
path = "tests/attestation.rs"

[features]
serialize = []
mock = ["serialize", "dep:rand", "dep:rcgen", "derive_more/debug"]

[dependencies]
chrono = { workspace = true, features = ["now"] }
ciborium.workspace = true
const-decoder.workspace = true
coset.workspace = true
der = { workspace = true, features = ["std", "derive"] }
derive_more = { workspace = true, features = ["as_ref", "display", "from", "deref"] }
nutype.workspace = true
p256 = { workspace = true, features = ["std", "ecdsa", "pkcs8"] }
passkey-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
x509-parser.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true

rand = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true, features = ["ring"] }

[dev-dependencies]
assert_matches.workspace = true
rand_core.workspace = true
rstest.workspace = true
